# chatbot

./: CMakeLists.txt  README.md  test.cpp
include/audio/: AudioIn.hpp  AudioOut.hpp  Vad.hpp
include/codec/: OpusCodec.hpp
include/net/: WsClient.hpp
include/realtime/: RealtimeClient.hpp
include/safety/: Moderation.hpp
include/utils/: Base64.hpp  Json.hpp  RingBuffer.hpp
src/: main.cpp
src/audio/: PortAudioIn.cpp  PortAudioOut.cpp  Vad.cpp
src/codec/: OpusCodec.cpp
src/net/: LwsClient.cpp
src/realtime/: RealtimeClient.cpp
src/safety/: Moderation.cpp
src/utils/: Base64.cpp  Json.cpp  RingBuffer.cpp
